Apply FFM best practices: thread-local arenas + PinnableSlice reads
Optimizations applied (inspired by rocksdb.org/blog/2024/02/20/foreign-function-interface.html):

1. Thread-local auxiliary segments — errHolder and valLenHolder are pre-allocated
   once per thread via Arena.ofAuto(), eliminating per-call Arena create/destroy.

2. PinnableSlice reads — replace rocksdb_get with rocksdb_get_pinned, which pins
   data directly from the block cache and avoids the intermediate std::string copy.

3. Zero-alloc ByteBuffer get path — PinnableSlice + MemorySegment.ofBuffer(output)
   gives a single copy from block cache to caller buffer with no Arena allocation.

Benchmark results (direct ByteBuffer, single thread):
| Benchmark   |     ops/s | vs prev FFM | vs JNI |
|-------------|-----------|-------------|--------|
| FFM reads   | 3,372,008 |       +11%  |  +74%  |
| JNI reads   | 1,932,697 |        n/a  |        |
| FFM writes  |   677,159 |        -1%  |  +17%  |
| JNI writes  |   580,864 |        n/a  |        |

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>